--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -1523,6 +1523,30 @@ sudo apt install zlib1g-dev
 sudo apt install libpcre3-dev
 # fatal error: openssl/bn.h: 没有那个文件或目录
 sudo apt install libssl-dev
+
+GRUB_DEFAULT=0
+GRUB_TIMEOUT=5
+GRUB_DISTRIBUTOR=`lsb_release -i -s 2> /dev/null || echo Debian`
+GRUB_CMDLINE_LINUX_DEFAULT="quiet acpi_backlight=vendor nomodeset"
+GRUB_CMDLINE_LINUX=""
+
+
+```
+
+
+
+## 更新内核
+
+
+
+```shell
+sudo apt update
+sudo apt-cache search linux-image
+sudo apt install linux-image-6.1.0-0.deb11.11-amd64 linux-headers-6.1.0-0.deb11.11-amd64
+sudo apt autoremove linux-image-5.10.0-22-amd64 linux-headers-5.10.0-22-amd64
+sudo apt autoremove linux-image-5.10.0-24-amd64 linux-headers-5.10.0-24-amd64
+sudo update-grub
+uname -r
 ```
 
 
@@ -25722,15 +25746,15 @@ rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 [Keepalived for Linux](https://www.keepalived.org/download.html)
 
 ```shell
-wget -c https://www.keepalived.org/software/keepalived-2.2.7.tar.gz
-sudo tar -zxvf keepalived-2.2.7.tar.gz -C /opt/apps/
-cd /opt/apps/keepalived-2.2.7
+wget -c https://www.keepalived.org/software/keepalived-2.1.5.tar.gz
+sudo tar -zxvf keepalived-2.1.5.tar.gz -C /opt/apps/
+cd /opt/apps/keepalived-2.1.5
 sudo apt update
-sudo apt install curl gcc libssl-dev libnl-3-dev libnl-genl-3-dev libnl-route-3-dev libnfnetlink-dev libsnmp-dev
+sudo apt install curl gcc libssl-dev libnl-3-dev libnl-genl-3-dev libsnmp-dev
 sudo ./configure --prefix=/opt/apps/keepalived
 sudo make
 sudo make install
-sudo rm -r /opt/apps/keepalived-2.2.7
+cd .. && sudo rm -r /opt/apps/keepalived-2.1.5
 ```
 
 
@@ -25753,15 +25777,11 @@ sudo rm -r /opt/apps/keepalived-2.2.7
 
 ```shell
 sudo groupadd -r apps
-sudo useradd -r -g apps -s /bin/false keepalived
+# sudo useradd -r -g apps -s /bin/false keepalived
 
 sudo mkdir /opt/temp/keepalived/
-sudo touch /opt/temp/keepalived/keepalived.pid
-sudo touch /opt/temp/keepalived/keepalived.vrrp.pid
-sudo mkdir /var/log/keepalived/
-sudo chown -R keepalived:root /opt/apps/keepalived
-sudo chown -R keepalived:root /opt/temp/keepalived
-sudo chown -R keepalived:root /var/log/keepalived
+# sudo chown -R keepalived:root /opt/apps/keepalived
+# sudo chown -R keepalived:root /opt/temp/keepalived
 sudo chmod +x /opt/apps/keepalived/check_haproxy.sh
 ```
 
@@ -25811,7 +25831,7 @@ sudo /opt/apps/keepalived/sbin/keepalived --help
 #   -h, --help                   Display this help message
   
 # 启动
-bash -c 'sudo -u keepalived /opt/apps/keepalived/sbin/keepalived -f /opt/apps/keepalived/etc/keepalived/keepalived.conf -p /opt/temp/keepalived/keepalived.pid -r /opt/temp/keepalived/keepalived.vrrp.pid -D -S 0'
+bash /opt/apps/keepalived/sbin/keepalived -f /opt/apps/keepalived/etc/keepalived/keepalived.conf -p /opt/temp/keepalived/keepalived.pid -r /opt/temp/keepalived/keepalived.vrrp.pid -D -S 0
 
 ps aux | grep 'keepalived'
 # 或者
@@ -25819,8 +25839,10 @@ cat /opt/temp/keepalived/keepalived.pid
 
 sudo kill -9 PID
 
+# 日志
 sudo cat /var/log/local.0.log
 sudo cat /var/log/user.log
+sudo cat /var/log/daemon.log
 ```
 
 
