--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -25594,29 +25594,29 @@ rabbitmq-plugins enable rabbitmq_management
 
 #### 配置
 
-/opt/apps/rabbitmq/etc/rabbitmq/rabbitmq.conf
+[Configuration — RabbitMQ](https://www.rabbitmq.com/configure.html)
+
+[RabbitMQ 生产环境配置详解-腾讯云开发者社区-腾讯云 (tencent.com)](https://cloud.tencent.com/developer/article/2057667)
+
+##### rabbitmq.conf
 
 默认 rabbitmq 是没有配置文件的，需要去官方 github上，复制一个配置文件模版过来。
-
-[rabbitmq.conf.example.3.12.6](../files/config/rabbitmq.conf.example)
 
 [rabbitmq.conf.example](https://github.com/rabbitmq/rabbitmq-server/blob/main/deps/rabbit/docs/rabbitmq.conf.example)
 
 
 
-```properties
-## Uncomment the following line if you want to allow access to the
-## guest user from anywhere on the network.
-loopback_users.guest = false
+[/opt/apps/rabbitmq/etc/rabbitmq/rabbitmq.conf](../files/config/rabbitmq.conf)
 
-## Log all requests to the management HTTP API to a file.
-##
-management.http_log_dir = /var/log/rabbitmq
+查看配置项 `cat /opt/apps/rabbitmq/etc/rabbitmq/rabbitmq.conf | grep ^[^#]`
 
-## Log directory, taken from the RABBITMQ_LOG_BASE env variable by default.
-##
-log.dir = /var/log/rabbitmq
-```
+
+
+##### rabbitmq-env.conf
+
+注意 `key=value` 键值对之间不要留空格
+
+[/opt/apps/rabbitmq/etc/rabbitmq/rabbitmq-env.conf](../files/config/rabbitmq-env.conf)
 
 
 
@@ -25730,6 +25730,28 @@ rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 
 
 ### 集群
+
+#### RabbitMQ
+
+```shell
+# 101
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl start_app
+
+# 102\103
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl stop_app
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl join_cluster --ram rabbit@server01
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl start_app
+
+# 查看集群状态
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl cluster_status
+
+# 设置镜像队列
+# set_policy Name Pattern Definition
+# Name：策略名称
+# Pattern：队列匹配规则，如果是匹配所有队列，则为 '^'
+# Definition：使用 ha-mode 模式中的 all，也就是同步所有匹配的队列
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl set_policy ha-policy-all "^" '{"ha-mode":"all"}'
+```
 
 
 
@@ -25857,7 +25879,7 @@ sudo cat /var/log/daemon.log
 
 #### HAProxy
 
-[RabbitMQ集群架构-3、Haproxy - 简书 (jianshu.com)](https://www.jianshu.com/p/6f22117f4ab0)
+
 
 ##### 安装配置部署管理
 
