--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -25685,7 +25685,10 @@ rabbitmq-server
 # 后台启动服务
 rabbitmq-server -detached
 # 停止服务
-rabbitmqctl stop
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl stop
+
+# 查看命令使用帮助
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl help set_permissions
 
 ## 插件管理
 # 插件列表
@@ -25705,24 +25708,25 @@ rabbitmqctl change_password username newpassword
 # 设置用户角色
 rabbitmqctl set_user_tags username tag
 # 用户设置为管理员
-rabbitmqctl set_user_tags username administrator
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl set_user_tags username administrator
 # 列出用户
 rabbitmqctl list_users
 
 ## 权限管理
+# 设置用户权限
+rabbitmqctl [--node <node>] [--longnames] [--quiet] set_permissions [--vhost <vhost>] <username> <conf> <write> <read>
+# conf: 一个正则匹配哪些资源能被该用户访问
+# write：一个正则匹配哪些资源能被该用户写入
+# read：一个正则匹配哪些资源能被该用户读取
+
+# 设置在所有虚拟主机拥有所有资源的读写权限
+sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 # 列出所有用户权限
 rabbitmqctl list_permissions
 # 查看制定用户权限
 rabbitmqctl list_user_permissions username
 # 清除用户权限
 rabbitmqctl clear_permissions [-p vhostpath] username
-# 设置用户权限
-# conf: 一个正则匹配哪些资源能被该用户访问
-# write：一个正则匹配哪些资源能被该用户写入
-# read：一个正则匹配哪些资源能被该用户读取
-rabbitmqctl set_permissions [-p vhostpath] username conf write read
-# 设置读写权限
-rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 ```
 
 
@@ -25731,7 +25735,39 @@ rabbitmqctl set_permissions -p / admin ".*" ".*" ".*"
 
 ### 集群
 
+[HAProxy+Keepalived搭建RabbitMQ高可用集群](https://zhuanlan.zhihu.com/p/345479364)
+
 #### RabbitMQ
+
+##### .erlang.cookie
+
+```shell
+# .erlang.cookie 的内容同步
+# .erlang.cookie 默认在当前用户根目录下，是隐藏文件，只读文件。
+# 权限要先改成777，改完以后还原成400
+# 将集群的机器内容改为一致，或者把一台机器.erlang.cookie上传到其他机器。
+sudo chmod 777 /home/rabbitmq/.erlang.cookie
+vim /home/rabbitmq/.erlang.cookie
+chmod 400 /home/rabbitmq/.erlang.cookie
+```
+
+
+
+##### host
+
+```shell
+sudo vim /etc/hosts
+192.168.31.101 server01
+192.168.31.102 server02
+192.168.31.103 server03
+
+# 重启网络
+sudo service networking restart
+```
+
+
+
+##### 配置集群
 
 ```shell
 # 101
@@ -25744,22 +25780,141 @@ sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl start_app
 
 # 查看集群状态
 sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl cluster_status
+```
 
-# 设置镜像队列
-# set_policy Name Pattern Definition
+
+
+##### 设置镜像队列
+
+```shell
+# 设置队列同步策略
+rabbitmqctl set_policy [-p Vhost] Name Pattern Definition [Priority]
+# -p Vhost：可选参数，针对指定 vhost 下的 queue 进行设置
 # Name：策略名称
-# Pattern：队列匹配规则，如果是匹配所有队列，则为 '^'
-# Definition：使用 ha-mode 模式中的 all，也就是同步所有匹配的队列
+# Pattern：队列匹配规则（正则表达式），如果是匹配所有队列，则为 '^'
+# Definition：镜像定义，包括三个部分：ha-mode、ha-params、ha-sync-mode
+#     ha-mode：指明镜像队列的模式，有效值为 all/exactly/nodes
+#         all：表示在集群所有的节点上进行镜像，也就是同步所有匹配的队列
+#         exactly：表示在指定个数的节点上进行镜像，节点的个数由 ha-params 指定
+#         nodes：表示在指定的节点上进行镜像，节点名称通过 ha-params 指定
+#     ha-params：ha-mode 模式需要用到的参数
+#     ha-sync-mode：镜像队列中消息的同步方式，有效值为：automatic、manually
+# Priority：可选参数， policy 的优先级，如果有两个或多个 Policy 都作用到同一个交换器或者队列上，且这些 Policy 的优先级都是一样的，则参数项最多的 Policy 优先。如果参数一样多，则最后添加的 Policy 优先
+
+
+# 列出默认虚拟机中所有的 Policy
+rabbitmqctl list_policies [-p vhost]
+
+# 清除指定的 Policy
+rabbitmqctl clear_policy [-p vhost] {name}
+
+# 同步所有队列
+# 在所有机器上执行
 sudo -u rabbitmq /opt/apps/rabbitmq/sbin/./rabbitmqctl set_policy ha-policy-all "^" '{"ha-mode":"all"}'
 ```
 
 
 
+#### HAProxy
+
+ HAProxy 提供高可用性、负载均衡以及基于TCP和HTTP应用的代理，支持虚拟主机，它是免费、快速并且可靠的一种解决方案。HAProxy 特别适用于那些负载特大的web站点，这些站点通常又需要会话保持或七层处理。HAProxy 运行在当前的硬件上，完全可以支持数以万计的并发连接。
+
+[Nginx 与 HAProxy 的区别](https://cloud.tencent.com/developer/article/2124089)
+
+##### 安装配置部署管理
+
+[HAproxy 配置详解](https://cloud.tencent.com/developer/article/2034982)
+
+###### 安装
+
+```shell
+wget -c https://www.haproxy.org/download/2.8/src/haproxy-2.8.3.tar.gz
+sudo tar -zxvf haproxy-2.8.3.tar.gz -C /opt/apps
+
+cd /opt/apps/haproxy-2.8.3
+sudo make ARCH=x86_64 TARGET=linux-glibc USE_PCRE=1 USE_OPENSSL=1 USE_ZLIB=1 PREFIX=/opt/apps/haproxy
+# ARCH=x86_64 #CPU架构，arch命令查看
+# TARGET=linux-glibc #通用linux内核
+# USE_PCRE=1 #PCRE支持正则表达式，用于用户请求的uri
+# USE_OPENSSL=1 #https，证书
+# USE_ZLIB=1 #开启压缩
+# USE_SYSTEMD=1 #使用systemd启动haproxy主进程
+# USE_CPU_AFFINITY=1 #CPU亲和性，让haproxy指定的进程工作在指定的CPU核心上
+# USE_LUA=1 LUA_INC=/usr/local/src/lua-5.3.5/src LUA_LIB=/usr/local/src/lua-5.3.5/src #开启lua，及lua和lua库所在路径
+# PREFIX=/opt/apps/haproxy #指定安装路径
+
+sudo make install PREFIX=/opt/apps/haproxy
+
+sudo rm -r /opt/apps/haproxy-2.8.3
+```
+
+
+
+###### 配置
+
+[/opt/apps/haproxy/haproxy.cfg](../files/config/haproxy.cfg)
+
+
+
+###### 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+sudo useradd -r -g apps -s /bin/false haproxy
+
+sudo mkdir /opt/temp/haproxy/
+sudo touch /opt/temp/haproxy/haproxy.pid
+sudo mkdir /var/log/haproxy/
+sudo chown -R haproxy:root /opt/apps/haproxy
+sudo chown -R haproxy:root /opt/temp/haproxy
+sudo chown -R haproxy:root /var/log/haproxy
+```
+
+
+
+###### 服务管理
+
+手动
+
+```shell
+# 启动
+sudo /opt/apps/haproxy/sbin/haproxy -f /opt/apps/haproxy/haproxy.cfg
+
+ps aux | grep 'haproxy'
+# 或者
+cat /opt/temp/haproxy/haproxy.pid
+
+sudo kill -9 PID
+```
+
+
+
+自动
+
+编写[脚本](../files/scripts/server/haproxy.server)文件放在 base_dir 目录下 `/opt/apps/haproxy/haproxy.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
+
+
+
+启动之后在浏览器打开[链接](http://localhost:15672/)，默认用户名/密码是 geust/geust 。
+
+使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆 localhost:15672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users 这个项就是控制访问的，如果只是取消 guest 用户的话，只需要 loopback_users.guest = false 即可。
+
+
+
 #### Keepalived
 
-[HAProxy+Keepalived搭建RabbitMQ高可用集群 - 知乎 (zhihu.com)](https://zhuanlan.zhihu.com/p/345479364)
+##### 简介
 
-[debian中keepalived搭建_debian11 安装keepalived-CSDN博客](https://blog.csdn.net/weixin_44298261/article/details/112056315)
+[Keepalived 介绍、安装及配置详解](https://blog.csdn.net/Jailman/article/details/128528844)
+
+Keepalived 起初是为 LVS(Linux Virtual Server) 设计的专门用来监控集群系统中各个服务节点的状态如果某个服务节点出现异常或者工作出现故障,Keepalived 将检测到,并将出现故障的服务节点从集群系统中剔除,而在故障节点恢复正常后,Keepalived 又可以自动将该服务节点重新加入集群中，这些工作全部自动完成。这部分功能类似于 Nginx 等反向代理的应用探活功能实现后端服务高可用。
+后来又加入了 VRRP(Virtual Router Redundancy Protocol) 的功能，虚拟路由协议出现的目的是为了解决静态路由出现的单点故障问题，通过VRRP可以实现网络不间断稳定运行，因此 Keepalived 一方面具有服务器状态检测和故障隔离功能，另一方面也有 HA cluster 功能；这个功能实现各种中间件高可用。
+
+
+
+[debian11 安装 keepalived](https://blog.csdn.net/weixin_44298261/article/details/112056315)
 
 ##### 安装配置部署管理
 
@@ -25874,94 +26029,6 @@ sudo cat /var/log/daemon.log
 编写[脚本](../files/scripts/server/keepalived.server)文件放在 base_dir 目录下 `/opt/apps/keepalived/keepalived.server`
 
 配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
-
-
-
-#### HAProxy
-
-
-
-##### 安装配置部署管理
-
-###### 安装
-
-```shell
-wget -c https://www.haproxy.org/download/2.8/src/haproxy-2.8.3.tar.gz
-sudo tar -zxvf haproxy-2.8.3.tar.gz -C /opt/apps
-
-cd /opt/apps/haproxy-2.8.3
-sudo make ARCH=x86_64 TARGET=linux-glibc USE_PCRE=1 USE_OPENSSL=1 USE_ZLIB=1 PREFIX=/opt/apps/haproxy
-# ARCH=x86_64 #CPU架构，arch命令查看
-# TARGET=linux-glibc #通用linux内核
-# USE_PCRE=1 #PCRE支持正则表达式，用于用户请求的uri
-# USE_OPENSSL=1 #https，证书
-# USE_ZLIB=1 #开启压缩
-# USE_SYSTEMD=1 #使用systemd启动haproxy主进程
-# USE_CPU_AFFINITY=1 #CPU亲和性，让haproxy指定的进程工作在指定的CPU核心上
-# USE_LUA=1 LUA_INC=/usr/local/src/lua-5.3.5/src LUA_LIB=/usr/local/src/lua-5.3.5/src #开启lua，及lua和lua库所在路径
-# PREFIX=/opt/apps/haproxy #指定安装路径
-
-sudo make install PREFIX=/opt/apps/haproxy
-
-sudo rm -r /opt/apps/haproxy-2.8.3
-```
-
-
-
-###### 配置
-
-[/opt/apps/haproxy/haproxy.cfg](../files/config/haproxy.cfg)
-
-
-
-###### 创建用户（组）
-
-```shell
-sudo groupadd -r apps
-sudo useradd -r -g apps -s /bin/false haproxy
-
-sudo mkdir /opt/temp/haproxy/
-sudo touch /opt/temp/haproxy/haproxy.pid
-sudo mkdir /var/log/haproxy/
-sudo chown -R haproxy:root /opt/apps/haproxy
-sudo chown -R haproxy:root /opt/temp/haproxy
-sudo chown -R haproxy:root /var/log/haproxy
-```
-
-
-
-###### 服务管理
-
-手动
-
-```shell
-# 启动
-sudo /opt/apps/haproxy/sbin/haproxy -f /opt/apps/haproxy/haproxy.cfg
-
-ps aux | grep 'haproxy'
-# 或者
-cat /opt/temp/haproxy/haproxy.pid
-
-sudo kill -9 PID
-```
-
-
-
-自动
-
-编写[脚本](../files/scripts/server/haproxy.server)文件放在 base_dir 目录下 `/opt/apps/haproxy/haproxy.server`
-
-配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
-
-
-
-启动之后在浏览器打开[链接](http://localhost:15672/)，默认用户名/密码是 geust/geust 。
-
-使用默认的用户 guest / guest （此也为管理员用户）登陆，会发现无法登陆，报错：User can only log in via localhost。那是因为默认是限制了guest用户只能在本机登陆，也就是只能登陆 localhost:15672。可以通过修改配置文件rabbitmq.conf，取消这个限制： loopback_users 这个项就是控制访问的，如果只是取消 guest 用户的话，只需要 loopback_users.guest = false 即可。
-
-
-
-
 
 
 
@@ -29871,7 +29938,7 @@ sudo mv /opt/apps/elasticsearch-8.10.0 /opt/apps/elasticsearch
 
 #### 配置
 
-[Elasticsearch：配置选项_es network.host 配置_Elastic 中国社区官方博客的博客-CSDN博客](https://blog.csdn.net/UbuntuTouch/article/details/129736026)
+[Elasticsearch：配置选项_es network.host 配置](https://blog.csdn.net/UbuntuTouch/article/details/129736026)
 
 config/elasticsearch.yml
 
