--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -647,37 +647,40 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 
 ### 101
 
-| APP           | Version | Port                                                  | Nginx             | Nginx 负载均衡 | 1.12.251.106         |
-| ------------- | ------- | ----------------------------------------------------- | ----------------- | -------------- | -------------------- |
-| ssh           |         | 22                                                    |                   |                | 11022                |
-| MySql         | 8.0.31  | 3306                                                  |                   |                | 11006                |
-| Redis         | 7.2.0   | 6379                                                  |                   |                | 11379                |
-| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                 |                   |                | 11200, 11300         |
-| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server] | 8848，9848， 9849 | 是             | 11848, 11948,  11949 |
-| Sentinel      | 1.8.6   | 8050[dashboard], 8719[api-server]                     |                   |                | 11050, 11719         |
-| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                         | 7091, 8091        | 是             | 11791, 11891         |
+| APP           | Version | Port                                                         | HAProxy/Nginx        | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
+| ------------- | ------- | ------------------------------------------------------------ | -------------------- | ------------------- | -------------- |
+| ssh           |         | 22                                                           | -                    | 11068               |                |
+| MySql         | 8.0.31  | 3306                                                         | -                    | 11282               |                |
+| Redis         | 7.2.0   | 6379                                                         | -                    | 11599               |                |
+| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                        | 10431, 10462         | 11431, 11462        |                |
+| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 10668, 10709, 10720  | 11668, 11709, 11720 | 是             |
+| Sentinel      | 1.8.6   | 8050[dashboard], 8719[api-server]                            | 10443, 10667         | 11443, 11667        |                |
+| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 10494, 10535         | 11494, 11535        | 是             |
+| RabbitMQ      | 3.12.6  | 15672[management], 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS] | 10575, 10574, 10563, | 11575, 11574, 11563 |                |
 
 
 
 ### 102
 
-| APP           | Version | Port                                                  | 1.12.251.106 |
-| ------------- | ------- | ----------------------------------------------------- | ------------ |
-| ssh           |         | 22                                                    | 12022        |
-| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                 | 12200, 12300 |
-| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server] |              |
-| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                         |              |
+| APP           | Version | Port                                                         | FRP(1,41,31,23,11)  |
+| ------------- | ------- | ------------------------------------------------------------ | ------------------- |
+| ssh           |         | 22                                                           | 12068               |
+| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                        | 12431, 12462        |
+| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 12668, 12709, 12720 |
+| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 12494, 12535        |
+| RabbitMQ      | 3.12.6  | 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS],15672[management] | 12574, 12563, 12575 |
 
 
 
 ### 103
 
-| APP           | Version | Port                                                  | 1.12.251.106 |
-| ------------- | ------- | ----------------------------------------------------- | ------------ |
-| ssh           |         | 22                                                    | 13022        |
-| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                 | 13200, 13300 |
-| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server] |              |
-| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                         |              |
+| APP           | Version | Port                                                         | FRP(1,41,31,23,11)  |
+| ------------- | ------- | ------------------------------------------------------------ | ------------------- |
+| ssh           |         | 22                                                           | 13068               |
+| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                        | 13431, 13462        |
+| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 13668, 13709, 13720 |
+| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 13494, 13535        |
+| RabbitMQ      | 3.12.6  | 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS],15672[management] | 13574, 13563, 13575 |
 
 
 
