--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -647,7 +647,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 
 ### 101
 
-| APP           | Version | Port                                                         | HAProxy/Nginx        | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
+| APP           | Version | Port                                                         | Proxy Port           | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
 | ------------- | ------- | ------------------------------------------------------------ | -------------------- | ------------------- | -------------- |
 | ssh           |         | 22                                                           | -                    | 11068               |                |
 | MySql         | 8.0.31  | 3306                                                         | -                    | 11282               |                |
