--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -647,16 +647,16 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 
 ### 101
 
-| APP           | Version | Port                                                         | Proxy Port           | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
-| ------------- | ------- | ------------------------------------------------------------ | -------------------- | ------------------- | -------------- |
-| ssh           |         | 22                                                           | -                    | 11068               |                |
-| MySql         | 8.0.31  | 3306                                                         | -                    | 11282               |                |
-| Redis         | 7.2.0   | 6379                                                         | -                    | 11599               |                |
-| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                        | 10431, 10462         | 11431, 11462        |                |
-| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 10668, 10709, 10720  | 11668, 11709, 11720 | 是             |
-| Sentinel      | 1.8.6   | 8050[dashboard], 8719[api-server]                            | 10443, 10667         | 11443, 11667        |                |
-| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 10494, 10535         | 11494, 11535        | 是             |
-| RabbitMQ      | 3.12.6  | 15672[management], 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS] | 10575, 10574, 10563, | 11575, 11574, 11563 |                |
+| APP           | Version | Port                                                         | Proxy Port                        | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
+| ------------- | ------- | ------------------------------------------------------------ | --------------------------------- | ------------------- | -------------- |
+| ssh           |         | 22                                                           | -                                 | 11068               |                |
+| MySql         | 8.0.31  | 3306                                                         | -                                 | 11282               |                |
+| Redis         | 7.2.0   | 6379                                                         | -                                 | 11599               |                |
+| ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                        | 10431, 10462                      | 11431, 11462        |                |
+| Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 10668, 11668(10709), 11669(10720) | 11668, 11709, 11720 | 是             |
+| Sentinel      | 1.8.6   | 8050[dashboard], 8719[api-server]                            | 10443, 10667                      | 11443, 11667        |                |
+| Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 10494, 10535                      | 11494, 11535        | 是             |
+| RabbitMQ      | 3.12.6  | 15672[management], 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS] | 10575, 10574, 10563,              | 11575, 11574, 11563 |                |
 
 
 
