--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -657,6 +657,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | Sentinel      | 1.8.6   | 8050[dashboard], 8719[api-server]                            | 10443, 10667                             | 11443, 11667        |                |
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 10494, 10535                             | 11494, 11535        | 是             |
 | RabbitMQ      | 3.12.6  | 15672[management], 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS] | 10575, 10574, 10563,                     | 11575, 11574, 11563 |                |
+| Zipkin        | 2.24.3  | 9411[dashboard]                                              | 10527                                    | 11527               |                |
 
 
 
@@ -669,6 +670,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 12668, 12709, 12720 |
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 12494, 12535        |
 | RabbitMQ      | 3.12.6  | 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS],15672[management] | 12574, 12563, 12575 |
+| Zipkin        | 2.24.3  | 9411[dashboard]                                              | 12527               |
 
 
 
@@ -681,6 +683,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 13668, 13709, 13720 |
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 13494, 13535        |
 | RabbitMQ      | 3.12.6  | 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS],15672[management] | 13574, 13563, 13575 |
+| Zipkin        | 2.24.3  | 9411[dashboard]                                              | 13527               |
 
 
 
