--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -653,6 +653,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | MySql         | 8.0.31  | 3306                                                         | -                                        | 11282               |                |
 | Redis         | 7.2.0   | 6379                                                         | -                                        | 11599               |                |
 | ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                        | 10431, 10462                             | 11431, 11462        |                |
+| ElasticSearch | 7.17.14 | 9270[http], 9370[tcp]                                        | 10592, 10623                             | 11592, 11623        |                |
 | Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 18848(10668), 19848(10709), 19849(10720) | 11668, 11709, 11720 | 是             |
 | Sentinel      | 1.8.6   | 8050[dashboard], 8719[api-server]                            | 10443, 10667                             | 11443, 11667        |                |
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 10494, 10535                             | 11494, 11535        | 是             |
@@ -667,6 +668,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | ------------- | ------- | ------------------------------------------------------------ | ------------------- |
 | ssh           |         | 22                                                           | 12068               |
 | ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                        | 12431, 12462        |
+| ElasticSearch | 7.17.14 | 9270[http], 9370[tcp]                                        | 12592, 12623        |
 | Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 12668, 12709, 12720 |
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 12494, 12535        |
 | RabbitMQ      | 3.12.6  | 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS],15672[management] | 12574, 12563, 12575 |
@@ -680,6 +682,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | ------------- | ------- | ------------------------------------------------------------ | ------------------- |
 | ssh           |         | 22                                                           | 13068               |
 | ElasticSearch | 8.10.0  | 9200[http], 9300[tcp]                                        | 13431, 13462        |
+| ElasticSearch | 7.17.14 | 9270[http], 9370[tcp]                                        | 12592, 12623        |
 | Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 13668, 13709, 13720 |
 | Seata         | 1.7.0   | 7090[dashboard], 8090[server]                                | 13494, 13535        |
 | RabbitMQ      | 3.12.6  | 5672[AMQP 0-9-1 without TLS], 5671[AMQP 0-9-1 with TLS],15672[management] | 13574, 13563, 13575 |
@@ -29837,44 +29840,7 @@ sudo mv /opt/apps/elasticsearch-8.10.0 /opt/apps/elasticsearch
 
 [Elasticsearch：配置选项_es network.host 配置](https://blog.csdn.net/UbuntuTouch/article/details/129736026)
 
-config/elasticsearch.yml
-
-```properties
-#
-# Use a descriptive name for the node:
-#
-node.name: es-node-101
-#
-# Path to directory where to store the data (separate multiple locations by comma):
-#
-path.data: /opt/data/elasticsearch
-#
-# Path to log files:
-#
-path.logs: /var/log/elasticsearch
-#
-# 插件目录
-#
-# path.plugins: /opt/apps/elasticsearch/plugins
-
-# By default Elasticsearch is only accessible on localhost. Set a different
-# address here to expose this node on the network:
-#
-# 局域网内访问
-# network.host: 192.168.0.1
-# 所有 IP 都能访问
-network.host: 0.0.0.0
-#
-# By default Elasticsearch listens for HTTP traffic on the first free port it
-# finds starting at 9200. Set a specific HTTP port here:
-#
-http.port: 9200
-#
-# https://blog.51cto.com/u_10950710/6663023
-#
-xpack.security.enabled: false
-
-```
+[config/elasticsearch.yml](../files/config/Data/ElasticSearch.yml)
 
 
 
@@ -30253,6 +30219,10 @@ PUT /索引库名称
 ```
 
 
+
+查看所有索引库
+
+/_cat/indices
 
 
 
