--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -650,6 +650,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | APP           | Version | Port                                                         | Proxy Port                               | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
 | ------------- | ------- | ------------------------------------------------------------ | ---------------------------------------- | ------------------- | -------------- |
 | ssh           |         | 22                                                           | -                                        | 11068               |                |
+| HAProxy       | 2.8.3   | 9188                                                         | -                                        | 11672               |                |
 | MySql         | 8.0.31  | 3306                                                         | -                                        | 11282               |                |
 | Redis         | 7.2.0   | 6379                                                         | -                                        | 11599               |                |
 | ElasticSearch | 8.10.4  | 9208[http], 9308[tcp]                                        | 10519, 10550                             | 11519, 11550        |                |
@@ -667,6 +668,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | APP           | Version | Port                                                         | FRP(1,41,31,23,11)  |
 | ------------- | ------- | ------------------------------------------------------------ | ------------------- |
 | ssh           |         | 22                                                           | 12068               |
+| HAProxy       | 2.8.3   | 9188                                                         | 12672               |
 | ElasticSearch | 8.10.4  | 9208[http], 9308[tcp]                                        | 12519, 12550        |
 | ElasticSearch | 7.17.7  | 9207[http], 9307[tcp]                                        | 12508, 12539        |
 | Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 12668, 12709, 12720 |
@@ -681,6 +683,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | APP           | Version | Port                                                         | FRP(1,41,31,23,11)  |
 | ------------- | ------- | ------------------------------------------------------------ | ------------------- |
 | ssh           |         | 22                                                           | 13068               |
+| HAProxy       | 2.8.3   | 9188                                                         | 13672               |
 | ElasticSearch | 8.10.4  | 9208[http], 9308[tcp]                                        | 13519, 13550        |
 | ElasticSearch | 7.17.7  | 9207[http], 9307[tcp]                                        | 12508, 12539        |
 | Nacos         | 2.2.3   | 8840[dashboard], 9840[grpc-client], 9841[grpc-server]        | 13668, 13709, 13720 |
