--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -29747,6 +29747,66 @@ git stash pop
 
 
 
+### 子模块
+
+[Git - 子模块](../files/HTML/Tools/Git/Git - 子模块.pdf)
+
+```shell
+# 添加新的子模块
+git submodule add git@github.com:yangxiongbro/JavaUtils.git 
+# 默认情况下，子模块会将子项目放到一个与仓库同名的目录中。 如果你想要放到其他地方，那么可以在命令结尾添加一个不同的路径
+git submodule add git@github.com:yangxiongbro/JavaUtils.git JavaUtils
+# 注意到新的 .gitmodules 文件。 该配置文件保存了项目 URL 与已经拉取的本地目录之间的映射
+# 如果有多个子模块，该文件中就会有多条记录。 该文件也像 .gitignore 文件一样受到（通过）版本控制
+# 它会和该项目的其他部分一同被拉取推送。 这就是克隆该项目的人知道去哪获得子模块的原因
+
+# 添加新的子模块后，默认会包含该子模块目录，但其中还没有任何文件
+# 执行下面两条命令检出子项目数据
+# 初始化本地配置文件
+git submodule init
+# 从该项目中抓取所有数据并检出父项目中列出的子项目合适的提交
+git submodule update
+# 将 git submodule init 和 git submodule update 合并成一步
+git submodule update --init
+# 初始化、抓取并检出任何嵌套的子模块
+git submodule update --init --recursive
+
+# 克隆父项目时同时克隆子项目
+# 如果给 git clone 命令传递 --recurse-submodules 选项，它就会自动初始化并更新仓库中的每一个子模块， 包括可能存在的嵌套子模块
+git clone --recurse-submodules git@github.com:yangxiongbro/DemoSpringCloudAlibaba.git -b develop  
+# 如果已经克隆了项目但忘记了 --recurse-submodules
+# 那么可以运行 git submodule update --init 或 git submodule update --init --recursive
+
+# 从远程更新子项目文件
+# 此命令默认会假定你想要更新并检出子模块仓库的 master 分支。 不过你也可以设置为想要的其他分支
+# 可以在 .gitmodules 文件中设置 （这样其他人也可以跟踪它）
+# 或者在 .git/config 文件中设置 （只在本地有效）
+# 在对应模块下添加 branch = release-1.0 即可修改为想要拉取的分支
+git submodule update --remote JavaUtils
+
+# 删除子模块
+# 1.从 .gitmodules 文件中删除子模块的相关条目
+# 2.从 .git/config 文件中删除子模块的相关条目
+# 3.从 Git 索引中删除子模块相关的目录
+git rm --cached JavaUtils
+# 4.删除子模块相关的未跟踪文件
+rm -rf .git/modules/JavaUtils
+# 5.删除子模块的物理文件
+rm -rf JavaUtils
+```
+
+报错
+
+```shell
+# fatal: Pathspec 'xxx' is in submodule 'xxx'
+git rm --cached JavaUtils
+
+# fatal: 'JavaUtils' already exists in the index
+git rm --cached JavaUtils
+```
+
+
+
 ### 其他
 
 ```shell
@@ -29994,7 +30054,7 @@ sudo service elasticsearch restart
 
 ### 日志系统
 
-​		日志系统应该是 ElasitcSearch 使用最广泛的场景之一了，ElasitcSearch 支持海量数据的存储和查询， 特别适合日志搜索场景。广泛使用的 ELK 套件(ElasitcSearch 、Logstash、Kibana)是日志系统最经典的案例，使用 Logstash 和 Beats 组件进行日志收集，ElasitcSearch 存储和查询应用日志，Kibana 提供日志的可 视化搜索界面。
+​		日志系统应该是 ElasitcSearch 使用最广泛的场景之一了，ElasitcSearch 支持海量数据的存储和查询， 特别适合日志搜索场景。广泛使用的 ELK 套件(ElasitcSearch 、Logstash、Kibana)是日志系统最经典的案例，使用 Logstash 和 Beats 组件进行日志收集，ElasitcSearch 存储和查询应用日志，Kibana 提供日志的可视化搜索界面。
 
 
 
