--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -28177,6 +28177,12 @@ sudo systemctl stop docker
 
 # Kubernetes
 
+[手把手教你部署一个最小化的 Kubernetes 集群](https://mp.weixin.qq.com/s/MEopULKBhvejRiEfLXW3jw)
+
+[玩转K8s网络](https://mp.weixin.qq.com/s/w9WqZRc77BtXYk_WOoCinQ)
+
+[Kubernetes Pod 是如何获取 IP 地址?](https://mp.weixin.qq.com/s/DP_TSDRdW7bPc9-j7Sxz6A)
+
 ## 概述
 
 
@@ -29032,347 +29038,6 @@ hashCode 散列码计算（来自：Effective Java）
 
 
 
-
-
-
-
-## 异常处理
-
-#### 基本类
-
-##### 异常断言接口
-
-```java
-/**
- * <b><code>Assert</code></b>
- * <p/>
- * 异常断言接口
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 上午11:37.
- *
- * @author yang xiong
- */
-public interface IAssert {
-
-    /**
-     * @description: 断言对象非空，如果对象为空，则抛出异常
-     * @param obj 待判断对象
-     * @return
-     * @throws
-     * @author yang xiong
-     * @date 2022/8/24 上午11:55
-     */
-    void assertNotNull(Object obj) throws BaseException;
-
-    /**
-     * @description:
-     * 断言对象非空，如果对象为空，则抛出异常
-     * 异常信息支持传递参数方式，避免在判断之前进行字符串拼接操作
-     *
-     * @param obj 待判断对象
-     * @param args message占位符对应的参数列表
-     * @return
-     * @throws
-     * @author yang xiong
-     * @date 2022/8/24 上午11:56
-     */
-    void assertNotNull(Object obj, Object... args) throws BaseException;
-
-    /**
-     * @description: 断言对象为 false，如果对象为空或true，则抛出异常
-     * @param obj 待判断对象
-     * @return
-     * @throws
-     * @author yang xiong
-     * @date 2022/8/24 上午11:56
-     */
-    void assertFalse(Boolean obj) throws BaseException;
-
-    /**
-     * @description:
-     * 断言对象为 false，如果对象为空或true，则抛出异常
-     * 异常信息支持传递参数方式，避免在判断之前进行字符串拼接操作
-     * @param obj 待判断对象
-     * @param args message占位符对应的参数列表
-     * @return
-     * @throws
-     * @author yang xiong
-     * @date 2022/8/24 上午11:59
-     */
-    void assertFalse(Boolean obj, Object... args) throws BaseException;
-}
-```
-
-
-
-##### 创建异常接口
-
-```java
-/**
- * <b><code>IBaseException</code></b>
- * <p/>
- * 创建异常接口
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 上午11:53.
- *
- * @author yang xiong
- */
-public interface IException {
-    /**
-     * @description: 创建异常
-     * @param args
-     * @return {@link BaseException}
-     * @throws
-     * @author yang xiong
-     * @date 2022/8/24 上午11:38
-     */
-    BaseException newException(Object... args);
-
-    /**
-     * @description: 创建异常
-     * @param t
-     * @param args
-     * @return {@link BaseException}
-     * @throws
-     * @author yang xiong
-     * @date 2022/8/24 上午11:38
-     */
-    BaseException newException(Throwable t, Object... args);
-}
-```
-
-
-
-##### 异常断言接口默认实现类
-
-```java
-/**
- * <b><code>AbstractAssert</code></b>
- * <p/>
- * 异常断言接口默认实现类， 由于枚举不能继承，所以不能使用抽象类
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 上午11:51.
- *
- * @author yang xiong
- */
-public interface BaseExceptionAssert extends IException, IAssert {
-    @Override
-    default void assertNotNull(Object obj) throws BaseException {
-        if (obj == null) {
-            throw newException(obj);
-        }
-    }
-
-    @Override
-    default void assertNotNull(Object obj, Object... args) throws BaseException {
-        if (obj == null) {
-            throw newException(args);
-        }
-    }
-
-    @Override
-    default void assertFalse(Boolean obj) throws BaseException {
-        if (!Boolean.FALSE.equals(obj)) {
-            throw newException(obj);
-        }
-    }
-
-    @Override
-    default void assertFalse(Boolean obj, Object... args) throws BaseException {
-        if (!Boolean.FALSE.equals(obj)) {
-            throw newException(args);
-        }
-    }
-}
-
-```
-
-
-
-##### 响应枚举值接口
-
-```java
-/**
- * <b><code>IResponseEnum</code></b>
- * <p/>
- * 响应枚举值接口
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 下午12:05.
- *
- * @author yang xiong
- */
-public interface IExceptionAssertResponseEnum {
-    int getCode();
-    String getMessage();
-}
-
-```
-
-
-
-##### 基础异常类
-
-```java
-/**
- * <b><code>BaseException</code></b>
- * <p/>
- * 基础异常类
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 下午12:31.
- *
- * @author yang xiong
- */
-@Getter
-public abstract class BaseException extends Throwable {
-    private IExceptionAssertResponseEnum exceptionAssertResponseEnum;
-    private Object[] args;
-    private String message;
-    private Throwable cause;
-
-    public BaseException(IExceptionAssertResponseEnum exceptionAssertResponseEnum, Object[] args, String message){
-        this.exceptionAssertResponseEnum = exceptionAssertResponseEnum;
-        this.args = args;
-        this.message = message;
-    }
-
-    public BaseException(IExceptionAssertResponseEnum exceptionAssertResponseEnum, Object[] args, String message, Throwable cause) {
-        this.exceptionAssertResponseEnum = exceptionAssertResponseEnum;
-        this.args = args;
-        this.message = message;
-        this.cause = cause;
-    }
-}
-```
-
-
-
-#### 具体业务异常处理
-
-
-
-##### 创建异常接口实现类
-
-```java
-/**
- * <b><code>AbstractBusinessExceptionAssert</code></b>
- * <p/>
- * 创建异常接口实现类，由于枚举不能继承，所以不能使用抽象类
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 下午12:09.
- *
- * @author yang xiong
- */
-public interface BaseBusinessExceptionAssert extends IExceptionAssertResponseEnum, BusinessExceptionAssert {
-    @Override
-    default BaseException newException(Object... args) {
-        String msg = MessageFormat.format(this.getMessage(), args);
-
-        return new BusinessException(this, args, msg);
-    }
-
-    @Override
-    default BaseException newException(Throwable t, Object... args) {
-        String msg = MessageFormat.format(this.getMessage(), args);
-
-        return new BusinessException(this, args, msg, t);
-    }
-}
-
-```
-
-
-
-##### 异常断言接口实现类
-
-```java
-/**
- * <b><code>BusinessExceptionAssert</code></b>
- * <p/>
- * 异常断言接口实现类， 由于枚举不能继承，所以不能使用抽象类
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 下午2:17.
- *
- * @author yang xiong
- */
-public interface BusinessExceptionAssert extends BaseExceptionAssert {
-}
-
-```
-
-
-
-##### 业务异常类
-
-```java
-/**
- * <b><code>BusinessException</code></b>
- * <p/>
- * 业务异常
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 下午12:34.
- *
- * @author yang xiong
- */
-public class BusinessException extends BaseException {
-
-    private static final long serialVersionUID = 1L;
-
-    public BusinessException(IExceptionAssertResponseEnum exceptionAssertResponseEnum, Object[] args, String message) {
-        super(exceptionAssertResponseEnum, args, message);
-    }
-
-    public BusinessException(IExceptionAssertResponseEnum exceptionAssertResponseEnum, Object[] args, String message, Throwable cause) {
-        super(exceptionAssertResponseEnum, args, message, cause);
-    }
-}
-
-```
-
-
-
-##### 业务异常断言响应枚举
-
-```java
-/**
- * <b><code>BusinessExceptionAssertResponseEnum</code></b>
- * <p/>
- * 业务异常断言响应枚举
- * <p/>
- * <b>Creation Time:</b> 2022/8/24 下午12:19.
- *
- * @author yang xiong
- */
-@Getter
-@AllArgsConstructor
-public enum BusinessExceptionAssertResponseEnum implements BaseBusinessExceptionAssert {
-
-    /**
-     * 业务指标字段未找到
-     */
-    L3_BQA_INDICATOR_FIELD_NOT_FOUND(1001, "业务指标字段未找到."),
-
-    /**
-     * 业务策略配置未找到
-     */
-    L3_BQA_STRATEGY_NOT_FOUND(1001, "业务策略配置未找到.");
-
-    /**
-     * 返回码
-     */
-    private int code;
-
-    /**
-     * 返回消息
-     */
-    private String message;
-}
-
-```
-
-
-
-
-
 # 数据库
 
 ## Oracle
@@ -29753,9 +29418,9 @@ git stash pop
 
 ```shell
 # 添加新的子模块
-git submodule add git@github.com:yangxiongbro/JavaUtils.git 
+git submodule add git@github.com:yangxiongbro/CommonJava.git
 # 默认情况下，子模块会将子项目放到一个与仓库同名的目录中。 如果你想要放到其他地方，那么可以在命令结尾添加一个不同的路径
-git submodule add git@github.com:yangxiongbro/JavaUtils.git JavaUtils
+git submodule add git@github.com:yangxiongbro/CommonJava.git CommonJava
 # 注意到新的 .gitmodules 文件。 该配置文件保存了项目 URL 与已经拉取的本地目录之间的映射
 # 如果有多个子模块，该文件中就会有多条记录。 该文件也像 .gitignore 文件一样受到（通过）版本控制
 # 它会和该项目的其他部分一同被拉取推送。 这就是克隆该项目的人知道去哪获得子模块的原因
@@ -29782,17 +29447,17 @@ git clone --recurse-submodules git@github.com:yangxiongbro/DemoSpringCloudAlibab
 # 可以在 .gitmodules 文件中设置 （这样其他人也可以跟踪它）
 # 或者在 .git/config 文件中设置 （只在本地有效）
 # 在对应模块下添加 branch = release-1.0 即可修改为想要拉取的分支
-git submodule update --remote JavaUtils
+git submodule update --remote CommonJava
 
 # 删除子模块
 # 1.从 .gitmodules 文件中删除子模块的相关条目
 # 2.从 .git/config 文件中删除子模块的相关条目
 # 3.从 Git 索引中删除子模块相关的目录
-git rm --cached JavaUtils
+git rm --cached CommonJava
 # 4.删除子模块相关的未跟踪文件
-rm -rf .git/modules/JavaUtils
+rm -rf .git/modules/CommonJava
 # 5.删除子模块的物理文件
-rm -rf JavaUtils
+rm -rf CommonJava
 ```
 
 报错
