--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -438,6 +438,10 @@ https://api.x-max.icu/link
 
 
 
+[subscribe](../files/v2rayN.subscribe.txt)
+
+
+
 ## Tampermonkey
 
 1、从 Microsoft store 下载 [Tampermonkey](https://microsoftedge.microsoft.com/addons/search/Tampermonkey) 并安装
