--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -654,6 +654,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | APP           | Version | Port                                                         | Proxy Port                               | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
 | ------------- | ------- | ------------------------------------------------------------ | ---------------------------------------- | ------------------- | -------------- |
 | ssh           |         | 22                                                           | -                                        | 11068               |                |
+| ProFTPD       | 1.3.8   | 21, 50000-50009                                              | -                                        | 11057, 50000-50009  |                |
 | HAProxy       | 2.8.3   | 9188                                                         | -                                        | 11672               |                |
 | MySql         | 8.0.31  | 3306                                                         | -                                        | 11282               |                |
 | Redis         | 7.2.0   | 6379                                                         | -                                        | 11599               |                |
@@ -1539,6 +1540,8 @@ sudo apt install zlib1g-dev
 sudo apt install libpcre3-dev
 # fatal error: openssl/bn.h: 没有那个文件或目录
 sudo apt install libssl-dev
+# msgfmt：未找到命令
+sudo apt install gettext
 
 GRUB_DEFAULT=0
 GRUB_TIMEOUT=5
@@ -30238,5 +30241,83 @@ DELETE /索引库名
 
 
 
+# ProFTPD
 
+[官网](http://www.proftpd.org/)
+
+
+
+## 安装
+
+```shell
+sudo wget -c ftp://ftp.proftpd.org/distrib/source/proftpd-1.3.8.tar.gz
+sudo tar -zxvf proftpd-1.3.8.tar.gz -C /opt/apps
+cd /opt/apps/proftpd-1.3.8 
+# nls是 mod_lang，文档：http://www.proftpd.org/docs/modules/mod_lang.html
+sudo ./configure --enable-nls --prefix=/opt/apps/proftpd
+sudo make
+# msgfmt：未找到命令
+# sudo apt update
+# sudo apt install gettext
+sudo make install
+sudo rm -r /opt/apps/proftpd-1.3.8 
+
+sudo mkdir /home/proftpd
+sudo mkdir /opt/data/proftpd
+sudo mkdir /var/log/proftpd
+```
+
+
+
+
+
+## 配置
+
+### 创建虚拟用户
+
+```shell
+# name 是登陆 ftp 的用户名 file 是密码文件位置  home 是 ftp 用户的根目录
+sudo /opt/apps/proftpd/bin/ftpasswd --passwd --uid=1001 --gid=101 --home=/home/proftpd --shell=/sbin/nologin --file=/opt/apps/proftpd/etc/ftpd.passwd --name=proftpd
+ 
+# 创建用户组，生成配置文件 member 将创建的用户添加到用户组中
+sudo /opt/apps/proftpd/bin/ftpasswd --group --file=/opt/apps/proftpd/etc/ftpd.group --gid=101 --name=ftp_groups --member=proftp
+```
+
+
+
+配置配置文件
+
+[/opt/apps/proftpd/etc/proftpd.conf](../files/config/proftpd.conf)
+
+
+
+## 创建用户（组）
+
+```shell
+sudo groupadd -r apps
+sudo useradd -r -g apps -s /bin/false proftpd
+
+sudo chown -R proftpd:root /opt/apps/proftpd
+sudo chown -R proftpd:root /home/proftpd
+sudo chown -R proftpd:root /var/log/proftpd
+```
+
+
+
+## 服务管理
+
+```shell
+sudo sbin/proftpd
+# 启动 proftpd
+sudo /opt/apps/proftpd/sbin/proftpd
+kill -9 PID
+# 检测后台进程是否存在
+ps -ef |grep proftpd
+```
+
+
+
+编写[脚本](../files/scripts/server/proftpd.server)文件放在 base_dir 目录下 `/opt/apps/proftpd/proftpd.server`
+
+配置参考 Linux -> 服务管理  -> 系统启动时自动运行服务
 
