--- a/solid/葵花宝典.MD
+++ b/solid/葵花宝典.MD
@@ -654,7 +654,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | APP           | Version | Port                                                         | Proxy Port                               | FRP(1,41,31,23,11)  | Nginx 负载均衡 |
 | ------------- | ------- | ------------------------------------------------------------ | ---------------------------------------- | ------------------- | -------------- |
 | ssh           |         | 22                                                           | -                                        | 11068               |                |
-| ProFTPD       | 1.3.8   | 21, 50000-50009                                              | -                                        | 11057, 50000-50009  |                |
+| ProFTPD       | 1.3.8   | 21, 11990-11999                                              | -                                        | 11057, 11990-11999  |                |
 | HAProxy       | 2.8.3   | 9188                                                         | -                                        | 11672               |                |
 | MySql         | 8.0.31  | 3306                                                         | -                                        | 11282               |                |
 | Redis         | 7.2.0   | 6379                                                         | -                                        | 11599               |                |
@@ -673,6 +673,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | APP           | Version | Port                                                         | FRP(1,41,31,23,11)  |
 | ------------- | ------- | ------------------------------------------------------------ | ------------------- |
 | ssh           |         | 22                                                           | 12068               |
+| ProFTPD       | 1.3.8   | 21, 12990-12999                                              | 12057, 12990-12999  |
 | HAProxy       | 2.8.3   | 9188                                                         | 12672               |
 | ElasticSearch | 8.10.4  | 9208[http], 9308[tcp]                                        | 12519, 12550        |
 | ElasticSearch | 7.17.7  | 9207[http], 9307[tcp]                                        | 12508, 12539        |
@@ -688,6 +689,7 @@ deb https://mirrors.tuna.tsinghua.edu.cn/debian-security bullseye-security main 
 | APP           | Version | Port                                                         | FRP(1,41,31,23,11)  |
 | ------------- | ------- | ------------------------------------------------------------ | ------------------- |
 | ssh           |         | 22                                                           | 13068               |
+| ProFTPD       | 1.3.8   | 21, 13990-13999                                              | 13057, 13990-13999  |
 | HAProxy       | 2.8.3   | 9188                                                         | 13672               |
 | ElasticSearch | 8.10.4  | 9208[http], 9308[tcp]                                        | 13519, 13550        |
 | ElasticSearch | 7.17.7  | 9207[http], 9307[tcp]                                        | 12508, 12539        |
@@ -745,6 +747,8 @@ userdel 选项 用户名
 usermod 选项 用户名
 # 常用的选项包括-c, -d, -m, -g, -G, -s, -u以及-o等，这些选项的意义与useradd命令中的选项一样，可以为用户指定新的资源值。
 # 另外，有些系统可以使用选项：-l 新用户名
+# -g GROUP 改用户的主要组
+# -G GROUP1 GROUP2 ... 将用户的组设置为这些组，并将用户从-G选项后未列出的组中删除。如果要用户添加到新组时，请配合 -a (append) 使用选项
 ```
 
 
@@ -30260,10 +30264,10 @@ sudo make
 # sudo apt update
 # sudo apt install gettext
 sudo make install
+cd /opt/apps/proftpd
 sudo rm -r /opt/apps/proftpd-1.3.8 
 
 sudo mkdir /home/proftpd
-sudo mkdir /opt/data/proftpd
 sudo mkdir /var/log/proftpd
 ```
 
@@ -30285,20 +30289,25 @@ sudo /opt/apps/proftpd/bin/ftpasswd --group --file=/opt/apps/proftpd/etc/ftpd.gr
 
 
 
-配置配置文件
+### 配置文件
+
+[ProFTPD：Limit配置.pdf](../files/HTML/ProFTPD/ProFTPD：Limit配置.pdf)
 
 [/opt/apps/proftpd/etc/proftpd.conf](../files/config/proftpd.conf)
 
-
+[Centos、Proftpd无法使用正确的用户名和密码登录-腾讯云开发者社区-腾讯云 (tencent.com)](https://cloud.tencent.com/developer/ask/sof/101600515)
 
 ## 创建用户（组）
 
 ```shell
 sudo groupadd -r apps
+sudo groupadd ftps
 sudo useradd -r -g apps -s /bin/false proftpd
+sudo useradd -g ftps -s /bin/bash -m ftper
+passwd ftper
+sudo usermod -aG ftps young
 
 sudo chown -R proftpd:root /opt/apps/proftpd
-sudo chown -R proftpd:root /home/proftpd
 sudo chown -R proftpd:root /var/log/proftpd
 ```
 
@@ -30313,6 +30322,19 @@ sudo /opt/apps/proftpd/sbin/proftpd
 kill -9 PID
 # 检测后台进程是否存在
 ps -ef |grep proftpd
+# 关闭 FTP 服务后，会在 /etc 下生成文件shutmsg，若要重新开放FTP服务，需要把 /etc/shutmsg 删除
+# 或者执行
+/opt/apps/proftpd/sbin/ftpshut -R
+
+# ftpshut
+# 用于在指定时间后关闭 FTP 服务
+# ftpshut [-d][-l][关闭时间]["警告信息"]
+# 30分钟后，关闭FTP服务。关闭前20分钟不再接受任何新的ftp连接，已经建立的在服务关闭前10分钟强制断线，并在客户端显示“FTP Server Will shutdown”
+ftpshut -l 20 -d 10 +30 "FTP Server Will shutdown"
+
+# ftpshut 会产生 /etc/shutmsg，只要删除这个文件 FTP 又可以重新提供服务
+# 或执行命令重启
+ftpshut -R
 ```
 
 
